# dalsoop-tmux-tools

./: Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.claire/worktrees/agent-a8a19e19/crates/tmux-config/src/: config_io.rs
.dal/tester/: dal.cue
.github/workflows/: ci.yml  release.yml
crates/tmux-config/: Cargo.toml  build.rs
crates/tmux-config/src/: apps.rs  cache.rs  cli.rs  command_runner.rs  config_io.rs  containers.rs  dal.rs  form.rs  list_view.rs  main.rs  proxmox.rs  pve_handler.rs  render.rs  seed.rs  settings.rs  ssh.rs  tabs.rs
crates/tmux-config/src/proxmox/: api.rs  cache.rs  client.rs  cluster.rs  display.rs  mod.rs  parse.rs  ssh.rs  types.rs
crates/tmux-config/src/proxmox/tests/fixtures/: corosync.conf  pct_list.txt  qm_list.txt
crates/tmux-fmt/: Cargo.toml
crates/tmux-fmt/src/: lib.rs  shims.rs  theme.rs  tmux.rs
crates/tmux-sessionbar/: Cargo.toml  README.md
crates/tmux-sessionbar/assets/: tmux-ai-status.py
crates/tmux-sessionbar/src/: ai_status.rs  main.rs
crates/tmux-sessionbar/src/commands/: apply.rs  click.rs  init.rs  mod.rs  plugin.rs  render.rs  status.rs  sync.rs
crates/tmux-sessionbar/src/config/: template.rs  tmux_conf.rs
crates/tmux-windowbar/: Cargo.toml  README.md
crates/tmux-windowbar/src/: main.rs
crates/tmux-windowbar/src/commands/: apply.rs  click.rs  init.rs  layout.rs  mod.rs  render.rs
crates/tmux-windowbar/src/config/: template.rs
src/: main.rs
src/commands/: init.rs  render.rs  status.rs
src/config/: mod.rs
tests/: Dockerfile  install-bats.sh  run.sh  smoke.bats
