[package]
name = "tmux-config"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tmux-windowbar = { path = "../tmux-windowbar" }
tmux-sessionbar = { path = "../tmux-sessionbar" }
tmux-fmt = { path = "../tmux-fmt" }

[build-dependencies]
hardcoded-lint = { git = "https://github.com/dalsoop/hardcoded-lint" }
