[package]
name = "tmux-fmt"
version = "0.1.0"
edition = "2024"
description = "Type-safe builder for tmux status bar format strings"
license = "MIT"
repository = "https://github.com/dalsoop/dalsoop-tmux-tools"
keywords = ["tmux", "terminal", "statusbar", "format"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
