[package]
name = "tmux-sessionbar"
version = "0.1.0"
edition = "2024"
description = "Clickable session list for tmux status bar, built in Rust"
license = "MIT"
repository = "https://github.com/dalsoop/dalsoop-tmux-tools"
keywords = ["tmux", "terminal", "session", "statusbar", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
