[package]
name = "tmux-windowbar"
version = "0.1.0"
edition = "2024"
description = "Clickable window list with [+] and [x] buttons for tmux status bar"
license = "MIT"
repository = "https://github.com/dalsoop/dalsoop-tmux-tools"

[lib]
name = "tmux_windowbar"
path = "src/lib.rs"

[[bin]]
name = "tmux-windowbar"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tmux-fmt = { path = "../tmux-fmt" }
toml = "0.8"

[build-dependencies]
hardcoded-lint = { git = "https://github.com/dalsoop/hardcoded-lint" }
